Форма ввода данных сменяет форму авториизации

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: deepskyblue;
+}
+
+input {
+  margin: 0 0 10px 0;
+  width: 250px;
+  box-sizing: border-box;
+}
+
+label {
+  input {
+    width: 30px;
+    display: inline;
+  }
+  p {
+    display: inline;
+  }
+
+}
+
+.auth {
+}
+
+.account {
+  height: 188px;
+  padding: 10px 10px 25px 10px ;
+}
+
+form {
+  width: 250px;
+  height: 145px;
+  margin: auto;
+  margin-top: 250px;
+  padding: 10px;
+  border: #959595 solid 1px;
+
+  background-color: #fff;
+  button {
+    float: right;
+  }
+}
